# starforge-rpg-prototype

./: .gitignore  .gutconfig.json  README.md  gut_tests_runner.sh  project.godot  pyproject.toml
addons/gut/: GutScene.gd.uid  UserFileViewer.gd.uid  autofree.gd.uid  awaiter.gd.uid  collected_script.gd.uid  collected_test.gd.uid  comparator.gd.uid  compare_result.gd.uid  diff_formatter.gd.uid  diff_tool.gd.uid  double_tools.gd.uid  doubler.gd.uid  dynamic_gdscript.gd.uid  gut.gd.uid  gut_cmdln.gd.uid  gut_config.gd.uid  gut_plugin.gd.uid  gut_to_move.gd.uid  gut_vscode_debugger.gd.uid  hook_script.gd.uid  inner_class_registry.gd.uid  input_factory.gd.uid  input_sender.gd.uid  junit_xml_export.gd.uid  lazy_loader.gd.uid  logger.gd.uid  method_maker.gd.uid  one_to_many.gd.uid  orphan_counter.gd.uid  parameter_factory.gd.uid  parameter_handler.gd.uid  printers.gd.uid  (+15 more)
autoload/: audio_manager.gd  audio_manager.gd.uid  combat_manager.gd  combat_manager.gd.uid  dialogue_manager.gd  dialogue_manager.gd.uid  game_manager.gd  game_manager.gd.uid  party_manager.gd  party_manager.gd.uid  relationship_manager.gd  relationship_manager.gd.uid  story_manager.gd  story_manager.gd.uid
data/: act1_location_graph.json
docs/: PARTY_SPLIT_ARCHITECTURE.txt  PARTY_SPLIT_SYSTEM.md  TASK_3.3_IMPLEMENTATION_SUMMARY.md  portfolio-grade.md
examples/: party_split_example.gd  party_split_example.gd.uid
scenes/: hex_grid.tscn  hex_grid_test.tscn
scripts/: run_tests.sh  validate_balance.py
tests/: test_runner.tscn
tests_py/: test_project_integrity.py
tools/: validate_project.py
(+231 files in other folders)
